--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ install:
   - pip install poetry
   - poetry install -vvv
 script:
-  - python -m unittest discover
+  - coverage run -m unittest discover
+  - coverage report
