--- a/tests/api/get_homepage.yml
+++ b/tests/api/get_homepage.yml
@@ -1,5 +1,8 @@
-url: "https://mubu.com/"
-method: "GET"
-headers:
-  "user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.87 Safari/537.36"
-verify: False
+request:
+    url: "https://mubu.com/"
+    method: "GET"
+    headers:
+        "user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.87 Safari/537.36"
+    verify: False
+validate:
+    status_code: 200
