--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ jsonpath = "^0.82"
 coverage = "^4.5.4"
 coveralls = "^1.8.2"
 
+[tool.poetry.scripts]
+hogrun = "hogwarts_httprunner.cli:main"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
