feat: 测试用例参数关联机制

--- a/tests/testcase/mubu_login.yml
+++ b/tests/testcase/mubu_login.yml
@@ -28,6 +28,20 @@
             "content-type": "application/x-www-form-urlencoded; charset=UTF-8"
         data: "phone=18613143458&password=3AnZNk%26iTteM2PYl1T%24p&remember=true"
         verify: False
+    extract:
+        code: $.code
     validate:
         status_code: 200
         $.code: 0
+
+-
+    request:
+        url: "https://mubu.com/list?code=$code"
+        method: "GET"
+        headers:
+            "user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.87 Safari/537.36"
+        verify: False
+    validate:
+        status_code: 200
+
+
